--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,6 @@
             name="viewmodel"
             type="com.wasusi.k_cloud.ui.auth.AuthViewModel" />
     </data>
-    <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -51,26 +50,29 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_background"
                 android:hint="Enter your Email"
+                android:text="@={viewmodel.email}"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
 
             <EditText
                 android:layout_marginTop="20dp"
-                android:id="@+id/etPhone"
+                android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Enter your phone number"
+                android:text="@={viewmodel.password}"
+                android:hint="@string/et_password_hint"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/input_background"
-                android:inputType="phone" />
+                android:inputType="textPassword" />
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button_background"
-                android:text="Login"
+                android:text="@string/register"
+                android:onClick="@{(v)->viewmodel.register(v)}"
                 android:textAllCaps="false"
                 android:backgroundTint="@color/cto_orange"/>
 
@@ -80,11 +82,12 @@
                 android:text="Don't have an account?"
                 android:layout_gravity="center"/>
             <TextView
-                android:id="@+id/linkRegister"
+                android:id="@+id/linkLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register"
+                android:text="@string/login"
                 android:textStyle="bold"
+                android:onClick="@{()->viewmodel.gotToLogin(v)}"
                 android:layout_gravity="center"
                 android:textColor="#000"/>
             <ProgressBar
