--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,104 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewmodel"
             type="com.wasusi.k_cloud.ui.auth.AuthViewModel" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.auth.LoginActivity"
-        android:orientation="vertical"
-        android:background="@color/navy_blue"
-        android:gravity="center">
-
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            tools:context=".ui.auth.LoginActivity"
             android:orientation="vertical"
-            android:layout_margin="20dp"
-            android:gravity="bottom">
-            <TextView
-                android:layout_width="wrap_content"
+            android:background="@color/navy_blue"
+            android:gravity="center">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_margin="20dp"
+                android:gravity="bottom">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Hello"
+                    android:textColor="@color/icon_gray"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:text="Welcome back"
+                    android:textColor="@color/gray"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:background="@drawable/authbackground"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Hello"
-                android:textColor="@color/icon_gray"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:text="Welcome back"
-                android:textColor="@color/gray"/>
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:layout_weight="15">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/login"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/navy_blue"/>
+                <EditText
+                    android:id="@+id/etEmail"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_background"
+                    android:hint="@string/et_email_hint"
+                    android:textColor="@color/navy_blue"
+                    android:textColorHint="@color/navy_blue"
+                    android:ems="10"
+                    android:text="@={viewmodel.email}"
+                    android:inputType="textEmailAddress" />
+
+                <EditText
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/etPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:textColor="@color/navy_blue"
+                    android:textColorHint="@color/navy_blue"
+                    android:text="@={viewmodel.password}"
+                    android:hint="@string/et_password_hint"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/input_background"
+                    android:inputType="textPassword" />
+
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background"
+                    android:text="@string/login"
+                    android:onClick="@{() -> viewmodel.login()}"
+                    android:textAllCaps="false"
+                    android:backgroundTint="@color/cto_orange"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/disabled_text"
+                    android:text="Don't have an account?"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/linkRegister"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/register"
+                    android:onClick="@{(v) -> viewmodel.gotToRegister(v)}"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:textColor="#000"/>
+
+                <ProgressBar
+                    android:id="@+id/progressbar"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:background="@drawable/authbackground"
-            android:layout_height="10dp"
-            android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:layout_weight="15">
-            <EditText
-                android:id="@+id/etEmail"
-                android:layout_marginTop="50dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_background"
-                android:hint="@string/et_email_hint"
-                android:ems="10"
-                android:text="@={viewmodel.email}"
-                android:inputType="textEmailAddress" />
 
-            <EditText
-                android:layout_marginTop="20dp"
-                android:id="@+id/etPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="@={viewmodel.password}"
-                android:hint="@string/et_password_hint"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/input_background"
-                android:inputType="textPassword" />
-
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/button_background"
-                android:text="@string/login"
-                android:onClick="@{() -> viewmodel.login()}"
-                android:textAllCaps="false"
-                android:backgroundTint="@color/cto_orange"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Don't have an account?"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/linkRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/register"
-                android:onClick="@{(v) -> viewmodel.gotToRegister(v)}"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:textColor="#000"/>
-
-            <ProgressBar
-                android:id="@+id/progressbar"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 </layout>
