Attach folders recyclerview to its adapter and implement its empty state

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -304,8 +304,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:orientation="vertical"
+                        android:visibility="gone"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:listitem="@layout/folder"/>
+                    <TextView
+                        android:id="@+id/emptyList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="200dp"
+                        android:textColor="@color/navy_blue"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="24dp"
+                        android:text=" Oops! no files found :("
+                        android:textStyle="bold"/>
+
 
 
                     <TextView
