Add ids to add file bottomsheet dialog layout cards

--- a/app/src/main/res/layout/add_file_layout.xml
+++ b/app/src/main/res/layout/add_file_layout.xml
@@ -56,6 +56,7 @@
                 android:layout_marginEnd="10dp">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/addDocument"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -86,6 +87,7 @@
 
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/addImage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -115,6 +117,7 @@
 
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/addMusic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
