Minor add file bottomsheet dialog ui card design change

--- a/app/src/main/res/layout/add_file_layout.xml
+++ b/app/src/main/res/layout/add_file_layout.xml
@@ -62,28 +62,28 @@
                     android:layout_weight="1"
                     android:layout_margin="10dp"
                     app:cardBackgroundColor="@color/document_bg"
-                    android:layout_marginBottom="30dp"
                     app:cardCornerRadius="10dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-
-                        android:src="@drawable/add_file"/>
-
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:src="@drawable/add_file"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Document"
-                            android:layout_marginBottom="20dp"
+                            android:layout_weight="1"
+
+                            android:layout_marginBottom="10dp"
                             android:textColor="@color/black"
                             android:layout_gravity="center"/>
                     </LinearLayout>
+
 
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
@@ -102,7 +102,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_marginBottom="5dp"
                         android:src="@drawable/picture"/>
                         <TextView
                             android:layout_width="wrap_content"
@@ -110,7 +110,7 @@
                             android:text="Image"
                             android:layout_weight="1"
 
-                            android:layout_marginBottom="20dp"
+                            android:layout_marginBottom="10dp"
                             android:textColor="@color/black"
                             android:layout_gravity="center"/>
                     </LinearLayout>
@@ -133,13 +133,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:layout_marginTop="10dp"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginBottom="5dp"
                             android:src="@drawable/sound_wave"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Music"
-                            android:layout_marginBottom="20dp"
+                            android:layout_weight="1"
+
+                            android:layout_marginBottom="10dp"
                             android:textColor="@color/black"
                             android:layout_gravity="center"/>
                     </LinearLayout>
