Update font family and font size

--- a/app/src/main/res/layout/activity_folder_details.xml
+++ b/app/src/main/res/layout/activity_folder_details.xml
@@ -182,7 +182,7 @@
 
                             android:text="Folder name"
                             android:textColor="@color/navy_blue"
-                            android:textSize="26dp"
+                            android:textSize="18dp"
                             android:textStyle="bold" />
 
                         <ImageView
@@ -216,7 +216,7 @@
                             android:hint="Search file"
                             android:textColor="@color/navy_blue"
                             android:textColorHint="@color/navy_blue"
-                            android:ems="10"
+                            android:textSize="13sp"
                             android:inputType="textEmailAddress" />
 
                     </LinearLayout>
