--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,18 +24,18 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 android:gravity="bottom">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:text="Hello"
-                    android:textColor="@color/icon_gray"/>
+                    android:textColor="@color/gray"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
+                    android:textSize="16sp"
                     android:text="Welcome back"
                     android:textColor="@color/gray"/>
             </LinearLayout>
@@ -44,8 +44,8 @@
                 android:background="@drawable/authbackground"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:layout_weight="15">
                 <ImageView
                     android:layout_width="match_parent"
@@ -59,23 +59,24 @@
                     android:fontFamily="@font/poppins_medium"
                     android:text="@string/login"
                     android:textColor="@color/navy_blue"
-                    android:textSize="30sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
                 <EditText
                     android:id="@+id/etEmail"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_background"
                     android:hint="@string/et_email_hint"
+                    android:fontFamily="@font/poppins"
                     android:textColor="@color/navy_blue"
+                    android:textSize="13sp"
                     android:textColorHint="@color/navy_blue"
-                    android:ems="10"
                     android:text="@={viewmodel.email}"
                     android:inputType="textEmailAddress" />
 
                 <EditText
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:id="@+id/etPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -84,7 +85,9 @@
                     android:textColorHint="@color/navy_blue"
                     android:text="@={viewmodel.password}"
                     android:hint="@string/et_password_hint"
+                    android:fontFamily="@font/poppins"
                     android:layout_marginBottom="10dp"
+                    android:textSize="13sp"
                     android:background="@drawable/input_background"
                     android:inputType="textPassword" />
 
@@ -101,8 +104,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:textColor="@color/disabled_text"
                     android:text="Don't have an account?"
+                    android:textSize="12sp"
                     android:layout_gravity="center"/>
                 <TextView
                     android:id="@+id/linkRegister"
