--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,8 +102,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Welcome To"
-                        android:textColor="@color/icon_gray"
-                        android:textSize="20sp" />
+                        android:textColor="@color/gray"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -111,7 +111,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="K-cloud File Repository"
                         android:textColor="@color/gray"
-                        android:textSize="25sp" />
+                        android:textSize="16sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -164,7 +164,7 @@
                                         android:layout_marginStart="5dp"
                                         android:text="folders "
                                         android:textColor="@color/white"
-                                        android:textSize="20dp"
+                                        android:textSize="16dp"
                                         android:textStyle="bold" />
 
 
@@ -180,7 +180,7 @@
                                         android:layout_height="wrap_content"
                                         android:text="All uploads: 40 files"
                                         android:textColor="@color/gray"
-                                        android:textSize="20dp" />
+                                        android:textSize="16dp" />
 
 
                                 </LinearLayout>
@@ -311,7 +311,7 @@
 
                             android:text="My Folders"
                             android:textColor="@color/navy_blue"
-                            android:textSize="20dp"
+                            android:textSize="16dp"
                             android:textStyle="bold" />
                         <androidx.cardview.widget.CardView
                             android:id="@+id/cardAddFolder"
@@ -379,7 +379,7 @@
                         android:gravity="center"
                         android:text=" Oops! no folders found :("
                         android:textColor="@color/navy_blue"
-                        android:textSize="24dp"
+                        android:textSize="18dp"
                         android:textStyle="bold" />
 
 
