--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,13 +28,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:text="Hello"
-                    android:textColor="@color/icon_gray"/>
+                    android:textColor="@color/gray"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
+                    android:textSize="16sp"
                     android:text="Welcome to K-cloud"
                     android:textColor="@color/gray"/>
             </LinearLayout>
@@ -43,29 +43,28 @@
                 android:background="@drawable/authbackground"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:layout_weight="15">
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_weight="10">
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:src="@drawable/register"
-                    android:maxHeight="100dp"
-                    android:layout_weight="1"/>
+                    android:layout_height="300dp"
+                    android:src="@drawable/register"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/register"
-                    android:textSize="25sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:textColor="@color/navy_blue"/>
                 <EditText
                     android:id="@+id/etEmail"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_background"
                     android:hint="Enter your Email"
+                    android:textSize="13sp"
                     android:textColor="@color/navy_blue"
                     android:textColorHint="@color/navy_blue"
                     android:text="@={viewmodel.email}"
@@ -73,7 +72,7 @@
                     android:inputType="textEmailAddress" />
 
                 <EditText
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:id="@+id/etPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -83,6 +82,7 @@
                     android:textColorHint="@color/navy_blue"
                     android:textColor="@color/navy_blue"
                     android:layout_marginBottom="10dp"
+                    android:textSize="13sp"
                     android:background="@drawable/input_background"
                     android:inputType="textPassword" />
 
@@ -100,6 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Don't have an account?"
+                    android:layout_marginTop="10dp"
                     android:textColor="@color/disabled_text"
                     android:layout_gravity="center"/>
                 <TextView
