Add file type to file

--- a/app/src/main/res/layout/single_month_layout.xml
+++ b/app/src/main/res/layout/single_month_layout.xml
@@ -7,17 +7,11 @@
     android:orientation="vertical"
     android:background="@color/page_background_color"
     android:layout_marginTop="10dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="Created in"
-        android:textColor="@color/icon_gray"
-        android:textStyle="bold" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -28,8 +22,8 @@
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
@@ -37,8 +31,8 @@
                     app:cardCornerRadius="100dp"
                     app:cardBackgroundColor="@color/cto_orange">
                     <androidx.cardview.widget.CardView
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
+                        android:layout_width="7dp"
+                        android:layout_height="7dp"
                         android:layout_margin="10dp"
                         app:cardCornerRadius="100dp"
                         android:layout_gravity="center"
